# poetry-demo

./: .gitignore  pyproject.toml
src/poetry_demo/: basic.py
tests/: test_basic.py
