[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [{ name = "Jonathan Malmaud", email = "malmaud@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy (>=1.0)", "pytest (>=8.0)"]

[tool.poetry]
packages = [{ include = "poetry_demo", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
